--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,7 @@
-<p>home works!</p>
+<div *ngFor="let product of products">
+    <a [routerLink]="['/product', product.id]">
+      <h2>{{ product.name }}</h2>
+      <img [src]="product.imageUrl" alt="{{ product.name }}">
+      <p>{{ product.cost }} points</p>
+    </a>
+  </div>
