--- a/src/app/components/productos/productos.component.html
+++ b/src/app/components/productos/productos.component.html
@@ -1,1 +1,4 @@
-<p>productos works!</p>
+<h1>{{ product.name }}</h1>
+<img [src]="product.imgurl" alt="{{ product.name }}" *ngIf="product.imgUrl">
+<p>{{ product.description }}</p>
+<p>Cost: {{ product.cost }} points</p>
