--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,5 @@
+<app-navbar></app-navbar>
+<app-banner></app-banner>
 <div *ngFor="let product of products">
     <a [routerLink]="['/product', product.id]">
       <h2>{{ product.name }}</h2>
